<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_after_login_user">AfterLoginUser</string>
    <string name="title_activity_book_request">BookRequestActivity</string>
    <string name="title_activity_view_requests">ViewRequestsActivity</string>
    <string name="title_activity_view_requests_activity_user">ViewRequestsActivityUser</string>
    <string name="title_activity_view_requests_activity_admin">ViewRequestsActivityAdmin</string>
    <string name="title_activity_view_requests_activity_librarian">ViewRequestsActivityLibrarian
    </string>
    <string name="title_activity_after_login_admin">AfterLoginAdmin</string>
    <string name="title_activity_after_login_librarian">AfterLoginLibrarian</string>
    <string name="title_activity_add_admin">AddAdminActivity</string>
    <string name="title_activity_add_librarian">AddLibrarianActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_guidelines">Guidelines</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help">Help</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Alerts</item>
        <item>Guidelines</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="action_logout">Logout</string>
    <!-- <string name="action_settings">Settings</string> -->
    <!--<string name="books">Book Details</string>
    <string name="tabs">Book Details</string>
    <string name="book">Time of Request</string>
    <string name="string.xml">Status</string>
    <string name="status">Status</string>-->

    <!--
    <string name="app_name">ListDisplay</string>
    <string name="action_settings">Settings</string>-->

</resources>
