<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_alerts" />

        <item
            android:id="@+id/nav_guidelines"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_guidelines" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />

    </group>


</menu>